# crm-api

./: .gitignore  pyproject.toml
app/: main.py
app/core/: config.py  enums.py  security.py
app/db/: base.py  models.py  session.py
app/dependencies/: auth.py  db.py
app/modules/auth/: router.py  service.py
app/modules/contacts/: model.py  router.py  schema.py  service.py
app/modules/followups/: model.py
app/modules/leads/: model.py  router.py  schema.py  service.py
app/modules/notes/: model.py  router.py  schema.py  service.py
app/modules/users/: model.py  schema.py
